@@ -1,5 +1,11 @@
 2008-04-30  kitone  <kitone@gna.org>
 
+	* src/gui/WaveformGeneratorUI.cc:
+	* src/gui/WaveformGeneratorUI.h:
+	Remove files.
+
+2008-04-30  kitone  <kitone@gna.org>
+
 	* src/Makefile.am:
 	* src/we/WaveformGenerator.cc:
 	* src/we/WaveformGenerator.h:
